<resources>
    <string name="app_name">Equal Equations</string>
    <string name="new_game">New Game</string>
    <string name="about">about</string>

    <string name="author_name">Gayath Halanayake</string>
    <string name="author_id">2019137 | w1761056</string>
    <string name="acknowledgement">
        I confirm that I understand what plagiarism is and have read and
        understood the section on Assessment Offences in the Essential Information for Students.
        The work that I have submitted is entirely my own. Any work from other authors is duly
        referenced and acknowledged.
    </string>

    <string name="greater">GREATER</string>
    <string name="equal">==</string>
    <string name="less">LESS</string>

    <string name="correct">CORRECT!</string>
    <string name="incorrect">WRONG!</string>
    <string name="correct_answer">correct answer is</string>
    <string name="equals">equals</string>
    <string name="times_up">Time\'s up!</string>
    <string name="tot_correct">Correct answers</string>
    <string name="tot_wrong">Wrong answers</string>
    <string name="spacer"> - </string>
    <string name="tip">press back to return to menu</string>
    <string name="dismissTip">tap to dismiss</string>
</resources>
