<?xml version="1.0" encoding="utf-8"?>
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
            android:id="@+id/newGameBtn"
            android:onClick="startGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/new_game"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
            android:id="@+id/aboutBtn"
            android:onClick="openAboutPopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>
