<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SummaryActivity"
        android:background="@color/mat_yellow"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_timer_70"
                app:tint="@color/black"
                android:contentDescription="@string/times_up" />

        <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times_up"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_correct"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                    android:id="@+id/tot_correct"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_wrong"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                    android:id="@+id/tot_incorrect"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
        <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</LinearLayout>
