<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".GameActivity">
    <TextView
            android:id="@+id/time"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="-50dp"
            android:layout_gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd"
            android:autoSizeTextType="uniform"/>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:id="@+id/leftEquation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="10"
                android:text=""
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@color/gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/rightEquation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="10"
                android:text=""
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:background="@color/gray"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="bottom">
        <Button
                android:onClick="onClickGreater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/greater"
                android:textSize="15sp"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <Button
                android:onClick="onClickEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/equal"
                android:textSize="15sp"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <Button
                android:onClick="onClickLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/less"
                android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>
